// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot for identify 1`] = `
Array [
  "%c[IDENTIFY]",
  "color: #0000ff; font-weight: bold",
]
`;

exports[`Matches snapshot for identify 2`] = `
Array [
  "userId: %c1",
  "color: #000000; font-weight: bold",
]
`;

exports[`Matches snapshot for identify 3`] = `
Array [
  "traits: ",
  undefined,
]
`;

exports[`Matches snapshot for identify 4`] = `
Array [
  "options: ",
  undefined,
]
`;

exports[`Matches snapshot for track 1`] = `
Array [
  "%c[TRACK]",
  "color: #ff0000; font-weight: bold",
]
`;

exports[`Matches snapshot for track 2`] = `
Array [
  "event: %cfoo",
  "color: #000000; font-weight: bold",
]
`;

exports[`Matches snapshot for track 3`] = `
Array [
  "properties: ",
  undefined,
]
`;

exports[`Matches snapshot for track 4`] = `
Array [
  "options: ",
  undefined,
]
`;
